--- a/topmanagerweb/templates/404.html
+++ b/topmanagerweb/templates/404.html
@@ -1,6 +1,8 @@
+{# templates/404.html #}
+
 {% extends "base.html" %}
 
-{% block title %}Page Not found{% endblock %}
+{% block title %}Page Not found{% endblock title %}
 
 {% block page_title %}Page Not found{% endblock page_title %}
 
