#8 #14 added admin link to index page

--- a/topmanagerweb/templates/base.html
+++ b/topmanagerweb/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}topmanagerweb{% endblock title %}</title>
+    <title>{% block title %}Top Manager{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,13 +39,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">topmanagerweb</a>
+          <a class="navbar-brand" href="#">Top Manager</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="admin">Admin</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -53,10 +54,10 @@
 
     <div class="container">
 
-      <h1>{% block page_title %}Example Base Template{% endblock page_title %}</h1>
+      <h1>{% block page_title %}Top Manager{% endblock page_title %}</h1>
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
+        <p>Only admin site is available. Click in admin tab in menu bar.</p>
       {% endblock content %}
 
     </div> <!-- /container -->
